ecommerce/pages/add-ons/material-plan/4.2.0/release-notes-material-plan.md
Add-on for eConnect for M3
==========================

Material Plan
=============

Version 4.2.0
-------------

**Table of Contents**

-   [Overview](#overview)

-   [Environment Details](#environment-details)

-   [Standard Features](#standard-features)

-   Highlight

Overview
--------

**LeanSwift eConnect for Infor M3** is a Magento extension that provides simple
yet powerful integration between the Magento eCommerce platform and Infor M3.

Extends standard Magento functionality and offers several transactions to ensure
your eCommerce websites contain up-to-date information from your M3 ERP.

**Add-on Material Plan** for eConnect provides the customers with information
about current available inventory, ATP quantity and the next available date per
product from M3.

Environment Details
-------------------

| **Environment**     | **Version** |
|---------------------|-------------|
| Magento Open source | 2.4.3       |
| Magento Community   | 2.4.3       |
| eConnect Community  | 21.4.0      |
| eConnect Commerce   | 21.4.0      |
| eConnect Base       | 6.1.1       |
| Rabbitmq            | 3.7.28      |
| Infor M3            | 16.1        |
| PHP                 | 7.4         |
| ION-BOD package     | 3.0.0       |

Standard Features
-----------------

All the features of Material Plan 3.1.0 remain the same in this version Provides
customers with information about current available inventory, ATP quantity and
the next available date per productfrom M3

For Simple Products, ATP is displayed in, - Product Detail Page - Cart Page

For Configurable and Grouped Products, ATP is displayed in, - Cart Page only

Highlight
---------

Material plan is made compatible with latest version of eConnect-Base 6.1.1

### Point of Contact

-   <prabhu.mano@leanswift.com>

-   <niranjan.b@leanswift.com>

-   [deepthi.tadikamalla\@leanswift.com](mailto:deepthi@leanswift.com)

-   <srinidhi.narayanan@leanswift.com>

-   <vaithiyanathan.paramasivam@leanswift.com>

-   <nrithya.rajagopalan@leanswift.com>
