ecommerce/pages/add-ons/material-plan/4.2.2/release-notes-material-plan.md
Add-on for eConnect for M3
==========================

Material Plan
=============

Version 4.2.2
-------------

**Table of Contents**

-   [Overview](#overview)

-   [Environment Details](#environment-details)

-   [Standard Features](#standard-features)

-   [Highlight](#highlight)

Overview
--------

**LeanSwift eConnect for Infor M3** is a Magento extension that provides simple
yet powerful integration between the Magento eCommerce platform and Infor M3.

Extends standard Magento functionality and offers several transactions to ensure
your eCommerce websites contain up-to-date information from your M3 ERP.

**Add-on Material Plan** for eConnect provides the customers with information
about current available inventory, ATP quantity and the next available date per
product from M3.


Environment Details
-------------------

| **Environment**     | **Version** |
|---------------------|-------------|
| Adobe Commerce      | 2.4.4       |
| eConnect Community  | 22.2.1      |
| eConnect Commerce   | 22.2.1-p1   |
| eConnect Base       | 6.2.1       |
| Rabbitmq            | 3.7.28      |
| Infor M3            | 16.1        |
| PHP                 | 8.1         |
| ION Package Version | 3.2.0       |


Standard Features
-----------------

All the features of Material Plan remain the same as previous version, It Provides
customers with information about current available inventory, ATP quantity and
the next available date per productfrom M3

For Simple Products, ATP is displayed in, - Product Detail Page - Cart Page

For Configurable and Grouped Products, ATP is displayed in, - Cart Page only


Highlight
---------

- AvailableToPromise data will now work even when the SKU and ERP Item Number for a product is different in Magento.


### Point of Contact

-   <nanthini.muralidaran@leanswift.com>

-   <prabhu.mano@leanswift.com>

-   [deepthi.tadikamalla\@leanswift.com](mailto:deepthi@leanswift.com)

-   <narayanan.gurusamy@leanswift.com>
